refactor(controller,dto): unify relation/admin resource DTOs
