# src/docs/swagger.json
@@ -644,7 +644,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "profile"
+                    "profile-get"
                 ],
                 "summary": "按类型获取用户关联数据",
                 "parameters": [
@@ -714,7 +714,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "profile"
+                    "profile-get"
                 ],
                 "summary": "获取用户自身基础信息",
                 "responses": {
